--- a/test-code-library-4.yaml
+++ b/test-code-library-4.yaml
@@ -4,8 +4,8 @@ metadata:
   name: test-code-library-4
   description: Testing Code Library 4
   tags:
-    - DB
-    - SQL
+    - database
+    - mysql
   links:
     - url: https://example.com/user
       title: Examples Users
