--- a/test-code-library-4.yaml
+++ b/test-code-library-4.yaml
@@ -29,7 +29,7 @@ metadata:
       title: Alerts
       icon: alert
 spec:
-  type: code-library
+  type: service
   lifecycle: development
   owner: gv
   system: test-system
