--- a/devx-discovery.yaml
+++ b/devx-discovery.yaml
@@ -20,9 +20,9 @@ metadata:
         user: "user:satya.raju"
     - 
       publisher: 
-        comments: ~
-        date: 
-        user: 
+        comments: "Test Comments for Discovery"
+        date: "2021-30-08 03:29:00"
+        user: "user:rajesh.chaganti"
   creationTimestamp: "2021-29-08 01:29:00"
   devxstate: Approved
   avgrating: 3.5
